charts/timeserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-service
  labels:
    app: time-service
spec:
  selector:
    matchLabels:
      app: time-service
  template:
    metadata:
      labels:
        app: time-service
    spec:
      containers:
      - image: time-service:0.1.0
        name: time-service
