charts/timeserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-service
spec:
  type: ClusterIP
  selector:
    app: time-service
  ports:
  - port: 8080
