charts/timeserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-timeserver
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /time
        backend:
          service:
            name: time-service
            port:
              number: 8080
      - pathType: Prefix
        path: /nanotime
        backend:
          service:
            name: time-service
            port:
              number: 8080
